# ChangeLog for media-libs/hamlib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.65 2012/02/06 13:12:06 tomjbe Exp $

*hamlib-1.2.15 (06 Feb 2012)

  06 Feb 2012; Thomas Beierlein <tomjbe@gentoo.org> +hamlib-1.2.15.ebuild:
  Version bump

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> hamlib-1.2.14.ebuild:
  x86 stable wrt bug #400377

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> hamlib-1.2.14.ebuild:
  Stable for amd64, wrt bug #400377

  15 Dec 2011; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.14.ebuild:
  Use only autotools-utils functions. Bug #392101

*hamlib-1.2.14 (01 Sep 2011)

  01 Sep 2011; Thomas Beierlein <tomjbe@gentoo.org> +hamlib-1.2.14.ebuild:
  Version bump

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> hamlib-1.2.10.ebuild,
  hamlib-1.2.11.ebuild, hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild:
  Drop ppc wrt #333603

  25 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild:
  Fix deprecation warnings.

*hamlib-1.2.13 (21 Mar 2011)

  21 Mar 2011; Thomas Beierlein <tomjbe@gentoo.org> -hamlib-1.2.12.ebuild,
  -hamlib-1.2.12-r1.ebuild, +hamlib-1.2.13.ebuild:
  Version bump. Remove old versions.

  27 Feb 2011; Tobias Klausmann <klausman@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Stable on alpha, bug #333603

  22 Feb 2011; Markos Chandras <hwoarang@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Stable on amd64 wrt bug #333603

  21 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  hamlib-1.2.12-r2.ebuild:
  x86 stable wrt bug #333603

  22 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Fix last python related changes a suggested by Arfrever

*hamlib-1.2.12-r2 (22 Dec 2010)

  22 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> +hamlib-1.2.12-r2.ebuild:
  Verify and potentially improve Python-related code, #313257
