@@ -9,18 +9,18 @@ DIST hamlib-1.2.12.tar.gz 1860387 RMD160 9216b1801b458968d299d4c4e2141a4b15df04d
 DIST hamlib-1.2.13.tar.gz 1643495 RMD160 71089726a1d43b5829d98681872d9c9f152e82f9 SHA1 33c44d0c371e0ad0c9cb3852e383adbf986de6e7 SHA256 5945b15e56ae6f39fdf70f4fe4936f0a5bed3f103750d0ddb7ab79ef7e9331af
 DIST hamlib-1.2.14.tar.gz 1627619 RMD160 b76b4cd58ee0a71b966409ce51340f9bb5760457 SHA1 77aeedab239547e646e8d0f7bee8637a4cc36774 SHA256 4231d431ebdd122cb5dea673e6dd8a3cb59601a770a1b2cc86264725dbe37843
 DIST hamlib-1.2.15.tar.gz 1668035 RMD160 4d93b8712f30f95dad40b35755879ee4d5c7ddee SHA1 8133ade08d9ec1874bbca9e552197f48588fd3a8 SHA256 35b7019c960961ee77ddbe912da816759c93c09b0b8b941b9a3fcb8d110b5144
-EBUILD hamlib-1.2.10.ebuild 2003 RMD160 2221f9f359cb3bf0ddcf4a087d88447e1b5be861 SHA1 4f629a1fdd3e02713882f055e3c6b0dcbb0caf99 SHA256 af4ba5d2acb3032613f13abbd3bb499af339ae24f9574956f680b603ef008f55
-EBUILD hamlib-1.2.11.ebuild 1783 RMD160 a90f26c13aa1f6d03ae0ea7e58e92b891f33aebd SHA1 6b2ae50062675b9b56e3343c95b164609463c552 SHA256 9c288938475d56aa2e4e66728ea7d0dd38a78a9bd575175b58c10c8fe083e5b2
-EBUILD hamlib-1.2.12-r2.ebuild 2031 RMD160 94fe5dfdf502547cb57640579e0259fd2d1936ac SHA1 e6d6ea5f5377a7ce05e9b8185d12773dce7bd2d6 SHA256 0a72a6f4b47d9f7a49104faaf38de47d5ac2529b27378c4ff9930640f08915fe
-EBUILD hamlib-1.2.13.ebuild 2031 RMD160 eb771748c9f19d3a58dea360a5c4f4e04ab98b0e SHA1 323fc347ac53a8e8b42fe26a7be38eb0c500949f SHA256 b7dc692cc4d6d157281a3c27f5a93476c34468bb5b068eded25c0f07d599a85b
-EBUILD hamlib-1.2.14.ebuild 2106 RMD160 becdb91a8932d0022e7738682a6d951628215bf0 SHA1 5a136c8b4bcc6a25abffc44dfd3c944eaf46979b SHA256 6398335f614332934a17a92b791dc06eb5ee0c4f009a7dccaf8529c9c8010f3a
-EBUILD hamlib-1.2.15.ebuild 2104 RMD160 33e17d58460c1da04da2a5851e3c53a27d0acfa1 SHA1 e163ba9988a36f1f6e02759900270948e97cf6a3 SHA256 7501bdb858aa93ffd718155b4a0c33b0a1ba9e914cab70f846eb4560ef3a6d7a
-MISC ChangeLog 10135 RMD160 366754be2410eb4fc60db067ee4f8bb023a26e5c SHA1 5875a128144d4966a368326ee22a9bb891ce6a8d SHA256 3841aff390db3763673cccfa2725dcbe66180980a72e01edd559d7305856c1a7
+EBUILD hamlib-1.2.10.ebuild 1998 RMD160 c83bc0f43890e54570c8692166c6bb697f4a40ce SHA1 d8b21070f01c9485d87922ad8dc426139291ddd9 SHA256 e601b279b7d6452171c709a86a4bc352febccc7949d6d8edee09b812338eed9f
+EBUILD hamlib-1.2.11.ebuild 1778 RMD160 603d65add6f98db8c6f1d71f3f7b90012c4c3923 SHA1 712e1df0e2f3ccc6e9ab8aae3bf8f8ebb656356e SHA256 f5c2ffc3c6e037ef5c591ef394b7ac92ae896f4a46345703d4e35fc3d6623f37
+EBUILD hamlib-1.2.12-r2.ebuild 2026 RMD160 699519849a65bdb62af92707b1f9c45203a29e62 SHA1 c510c131512f4450a0516100e695264083baefff SHA256 892536d4a6cd2c88b9ae5af02a0d31d98292f44375e149d83d3d2a27b068f31e
+EBUILD hamlib-1.2.13.ebuild 2026 RMD160 631982d7955749e3e229a3b5a6a6acb77710e39b SHA1 03b9fb868b19460c6a376f884463a682ffcb7fa3 SHA256 70e7b01fb3683f61394755a5fb5b51188fe6354495768c0ce1bfe2cb0ce6ab44
+EBUILD hamlib-1.2.14.ebuild 2101 RMD160 774b473eb516f064037e3db2c2c6b8eb1de8e63e SHA1 8d94ec71bb5570b927860e9bdb44781db9ae160e SHA256 f89f651090b1ec97184fcd8888a4df4cd0d7ca280bfcc7f4095ceb86f2745293
+EBUILD hamlib-1.2.15.ebuild 2103 RMD160 96bbec23214efc744ba0a4c7466b9ed65f1b7dbf SHA1 d4c32b9bc8ae79a6822358a1f26ab23043eabc2f SHA256 3c0595b03f39225b272aa4bab3cc5d0a93929dee9f04111c741da2bfb1473488
+MISC ChangeLog 10369 RMD160 f681bbe26db0daf1926c3cf49f4c73e2951c5a20 SHA1 02c95e84f702f6dbac75051c31ddca49f175db4e SHA256 56d82991e7af8b6bda6976ee5f5acdc66e788f9c32e57d5f9d4948b9066b8c63
 MISC metadata.xml 235 RMD160 f4ff4565289571ee422eccea7fdfefad9ee6be79 SHA1 8bd6a736d788a9b631454c68331b18f94402ea59 SHA256 ae15692b7066faecf636a6f882d1b44a4fb1e6357ba1c0a91b5753d43eb0139d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk8v0bIACgkQQe4uqXYgU9UABQCgg0j1fSYH7BQbAfR+AAscvE7R
-BjkAoNsT9c/EqGgjUC7CN+gGihmiWhxl
-=vo8z
+iEYEARECAAYFAk+jyBUACgkQQe4uqXYgU9UVbgCeODXeoOHxYD8tH6Q7y7OrqkXu
+xXwAoLmXdKDXtqUQ2FRI0/SzMwANbA75
+=Kfhr
 -----END PGP SIGNATURE-----
