@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/Attic/hamlib-1.2.11.ebuild,v 1.5 2011/08/12 21:15:44 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/Attic/hamlib-1.2.11.ebuild,v 1.6 2012/05/04 12:13:53 tomjbe Exp $
 
 PYTHON_DEPEND="2"
 inherit autotools eutils multilib python
@@ -23,7 +23,7 @@ RDEPEND="
 	tcl? ( dev-lang/tcl )"
 
 DEPEND=" ${RDEPEND}
-	dev-util/pkgconfig
+	virtual/pkgconfig
 	dev-lang/swig
 	>=sys-devel/libtool-2.2
 	doc? ( app-doc/doxygen )"
