@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/hamlib-1.2.12-r2.ebuild,v 1.8 2011/08/12 21:15:44 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/hamlib-1.2.12-r2.ebuild,v 1.9 2012/05/04 12:13:53 tomjbe Exp $
 
 EAPI="3"
 PYTHON_DEPEND="python? 2"
@@ -24,7 +24,7 @@ RDEPEND="
 	tcl? ( dev-lang/tcl )"
 
 DEPEND=" ${RDEPEND}
-	dev-util/pkgconfig
+	virtual/pkgconfig
 	dev-lang/swig
 	>=sys-devel/libtool-2.2
 	doc? ( app-doc/doxygen )"
