@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/hamlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.65 2012/02/06 13:12:06 tomjbe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.66 2012/05/04 12:13:53 tomjbe Exp $
+
+  04 May 2012; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.10.ebuild,
+  hamlib-1.2.11.ebuild, hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild,
+  hamlib-1.2.14.ebuild, hamlib-1.2.15.ebuild:
+  dev-uitl/pkgconfig -> virtual/pkgconfig
 
 *hamlib-1.2.15 (06 Feb 2012)
 
